@@ -1,6 +1,7 @@
-import org.apache.spark.rdd.RDD
 import org.apache.spark.{SparkConf, SparkContext}
 package AR {
+
+  import org.apache.spark.storage.StorageLevel
 
   object Main {
     def main(args: Array[String]): Unit = {
@@ -9,17 +10,29 @@ package AR {
       val fileTemp = args(2)
       val conf = new SparkConf().setAppName("Association Rules")
         .set("spark.serializer", "org.apache.spark.serializer.KryoSerializer")
-        .set("spark.network.timeout","3000")
+        .set("spark.network.timeout", "3000")
+        .set("spark.kryoserializer.buffer.max", "2047m")
+        .set("spark.executor.extraJavaOptions", "-verbose:gc -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -XX:ThreadStackSize=2048 -XX:+UseCompressedOops -XX:+UseParNewGC -XX:+CMSParallelRemarkEnabled -XX:+UseConcMarkSweepGC -XX:CMSInitiatingOccupancyFraction=75")
+      conf.registerKryoClasses(Array(classOf[FPTree], classOf[FPGrowth]))
       val sc = new SparkContext(conf)
-      val originData = sc.textFile(fileInput + "/D.dat", 1800)
+      val originData = sc.textFile(fileInput + "/D.dat", 896)
 
-      val transactions: RDD[Array[Int]] = originData.map(s => s.trim.split(' ').map(x => x.toInt)).cache()
-      val model = new FPGrowth().setMinSupport(0.092).setNumPartitions(900).run(transactions)
-      model.freqItemsets.map(x=>x.items.reverse.mkString(" ")).sortBy(x=>x).saveAsTextFile(fileOutput+"/D.dat")
+      val transactions = originData.map(
+        _.trim.split(' ').map(_.toInt)
+      ).cache()
+      val model = new FPGrowth()
+        .setMinSupport(0.092)
+        .run(transactions)
+      model.freqItemsets.map(
+        _.items.reverse.mkString(" ")
+      ).sortBy(x => x)
+        .saveAsTextFile(fileOutput + "/D.dat")
       //val answerData = sc.textFile(fileInput + "/D-answer.dat").map(x=>x.trim.split(" ").map(x=>x.toInt)).map(x=>(x.take(x.length-1),x.last))
       //val freqItemss = sc.textFile(fileInput + "/freq.dat").collect().map(x=>x.trim.split(" ").map(x=>x.toInt))
       //val freqItems = freqItemss(0)
-      val itemsWithFreq = model.freqItemsets.map(x => (x.items.toList, x.freq)).collect()
+      val itemsWithFreq = model.freqItemsets.map(
+        x => (x.items.toList, x.freq)
+      ).collect()
       val itemsWithFreqMap = itemsWithFreq.toMap
 
       var root: RulesTree = RuleNode(0, 0.0, Nil)
@@ -35,9 +48,15 @@ package AR {
       }
 
       val tree = sc.broadcast(root)
-      val userData = sc.textFile(fileInput + "/U.dat", 300)
-      val users = userData.map(s => s.trim.split(' ').map(x => x.toInt)).map(x => x.intersect(model.freqItems))
-      users.map(x => tree.value.find(x.toSet)._1).saveAsTextFile(fileOutput + "/U.dat")
+      val userData = sc.textFile(fileInput + "/U.dat")
+      val users = userData.map(
+        _.trim.split(' ').map(_.toInt)
+      ).map(
+        _.intersect(model.freqItems)
+      )
+      users.map(
+        x => tree.value.find(x.toSet)._1
+      ).saveAsTextFile(fileOutput + "/U.dat")
 
     }
   }
